@@ -1,0 +1,29 @@
+<!--
+  Local test files use in Jena2 development
+
+  Test core hasValue processing - 'if' direction.
+-->
+<rdf:RDF
+    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+    xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+    xmlns:owl="http://www.w3.org/2002/07/owl#"
+    xml:base="http://www.w3.org/2002/03owlt/localtests/premisesHv1" >
+    
+    <owl:ObjectProperty rdf:ID="p"/>
+    
+    <owl:Class rdf:ID="c">
+        <rdfs:subClassOf>
+                <owl:Restriction>
+                   <owl:onProperty rdf:resource="#p"/>
+                   <owl:hasValue rdf:resource="#d" />
+                </owl:Restriction>
+        </rdfs:subClassOf>
+    </owl:Class>
+    
+     <owl:Thing rdf:ID="d" />
+     
+     <owl:Thing rdf:ID="i">
+        <rdf:type rdf:resource="#c" />
+     </owl:Thing>
+
+</rdf:RDF>
